Fixed CSS to center ant-collapse

--- a/src/containers/ProfileDetails/components/index.module.scss
+++ b/src/containers/ProfileDetails/components/index.module.scss
@@ -47,6 +47,11 @@
   :global(.ant-upload.ant-upload-select-picture-card) {
     width: 100%;
   }
+
+  :global(.ant-collapse-header) {
+    font-size: 16px;
+    transform: translate(0, 10%);
+  }
 }
 
 .FlexDiv {
